Fix HTML formatting and ensure proper structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sueltos em SP - Site Oficial</title>
-    <meta name="description" content="Grupo musical Sueltos em SP e Bloco de Carnaval">
+    <meta name="description" content="Grupo Sueltos em SP e Bloco de Carnaval">
     <style>
         :root {
             --primary-blue: #002266;
@@ -281,4 +281,5 @@
     </footer>
 
 </body>
+
 </html>
